objects/APTS_SAP_Integration_Tokens__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting holds all SAP static strings, passwords, tokens etc.</description>
    <fields>
        <fullName>APTS_Base_Address__c</fullName>
        <label>Base Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bau_Code__c</fullName>
        <label>Bau Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Block_in_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block in SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_Response_Culture__c</fullName>
        <label>ERP Response Culture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Http_Header_Key__c</fullName>
        <label>Http Header Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Key_Name__c</fullName>
        <label>Key Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Call_Timeout_Millis__c</fullName>
        <label>SAP Call Timeout Millis</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_oAuth_Token__c</fullName>
        <description>It holds oAuth Token URL</description>
        <label>oAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>This field is used to store Client Secret of Mule-soft</description>
        <label>Client_Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_id__c</fullName>
        <description>This field is used to store the Client Id of Mule-soft</description>
        <label>Client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAP Integration Tokens</label>
</CustomObject>